WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
121947
[ATK] accessibility/aria-sort.html is failing after
r156409
https://bugs.webkit.org/show_bug.cgi?id=121947
Summary
[ATK] accessibility/aria-sort.html is failing after r156409
Mario Sanchez Prada
Reported
2013-09-26 03:17:05 PDT
After fixing
bug 118511
, the ATK wrapper and friends (ATK bits of DRT & WKTR) need some changes for this test to pass again
Attachments
Patch proposal
(6.83 KB, patch)
2013-09-26 03:24 PDT
,
Mario Sanchez Prada
cfleizach
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2013-09-26 03:17:28 PDT
<
rdar://problem/15085772
>
Mario Sanchez Prada
Comment 2
2013-09-26 03:24:34 PDT
Created
attachment 212687
[details]
Patch proposal Attached correction for the ATK wrapper and needed implementation in DRT/WKTR
Mario Sanchez Prada
Comment 3
2013-09-27 01:56:59 PDT
Committed
r156530
: <
http://trac.webkit.org/changeset/156530
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug